force-app/main/default/objects/Campaign/fields/Count_of_Orders_with_Show__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Orders_with_Show__c</fullName>
    <label>Count of Orders with Show</label>
    <summaryFilterItems>
        <field>CampaignMember.Event_m_destatus__c</field>
        <operation>equals</operation>
        <value>Show</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.Order_Total__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>