force-app/main/default/objects/Campaign/fields/Count_of_Refunds_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Refunds_in_Campaign__c</fullName>
    <label>Count of Refunds in Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>