force-app/main/default/objects/Campaign/fields/Count_of_Scanned_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Scanned_Tickets__c</fullName>
    <label>Count of Scanned Tickets</label>
    <summarizedField>CampaignMember.Tickets_Scanned_at_Entry__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>