force-app/main/default/objects/Campaign/fields/Count_of_Show__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Show__c</fullName>
    <label>Count of &quot;Show&quot;</label>
    <summaryFilterItems>
        <field>CampaignMember.Event_m_destatus__c</field>
        <operation>equals</operation>
        <value>Show</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>