force-app/main/default/objects/Campaign/fields/Count_of_Walk_In_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Walk_In_Attendees__c</fullName>
    <label>Count of &quot;Walk-In Attendees&quot;</label>
    <summaryFilterItems>
        <field>CampaignMember.Walk_In_Attendee__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>