force-app/main/default/objects/Campaign/fields/Created_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Current_User__c</fullName>
    <formula>IF( CreatedById  = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Current User</label>
    <type>Checkbox</type>
</CustomField>