force-app/main/default/objects/Campaign/fields/Creative_ID__c.field-meta.xml
<CustomField>
    <fullName>Creative_ID__c</fullName>
    <label>Creative ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>