force-app/main/default/objects/Campaign/fields/Current_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Current_Bookings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>