force-app/main/default/objects/Campaign/fields/Date_Of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Cancellation__c</fullName>
    <label>Date Of Cancellation</label>
    <type>DateTime</type>
</CustomField>