force-app/main/default/objects/Campaign/fields/Date_of_Location_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Location_Change__c</fullName>
    <label>Date of Location Change</label>
    <type>DateTime</type>
</CustomField>