force-app/main/default/objects/Campaign/fields/Date_of_rescheduling__c.field-meta.xml
<CustomField>
    <fullName>Date_of_rescheduling__c</fullName>
    <label>Date of rescheduling</label>
    <type>DateTime</type>
</CustomField>