force-app/main/default/objects/Campaign/fields/Days_Booked_in_Advance__c.field-meta.xml
<CustomField>
    <fullName>Days_Booked_in_Advance__c</fullName>
    <formula>Start__c -  Open_for_Bookings_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Booked in Advance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>