force-app/main/default/objects/Campaign/fields/Days_Until_Event_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Event_Start__c</fullName>
    <formula>IF( Start__c - NOW() &gt; 0, FLOOR( Start__c - NOW() ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Event Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>