force-app/main/default/objects/Campaign/fields/Difference_in_Booked_Seats__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_Booked_Seats__c</fullName>
    <formula>Booked_Seats__c - Booked_Seats_From_Airtable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference in Booked Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>