force-app/main/default/objects/Campaign/fields/Digital_Lecture_Form__c.field-meta.xml
<CustomField>
    <fullName>Digital_Lecture_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is the deciding factor on whether we send out the Digital Lecture Form, at the end of a lecture. If checked, the SMS will be sent out and the related Campaign Members, should use the Digital Lecture Form (they receive a link) instead of the physical form (Tilmeldingsblanket).</inlineHelpText>
    <label>Digital Lecture Form</label>
    <type>Checkbox</type>
</CustomField>