force-app/main/default/objects/Campaign/fields/Digital_Lecture_Form_Instant_SMS_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Digital_Lecture_Form_Instant_SMS_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this field is set, will immediately send out a Digital Lecture Form (Tilmeldingsblanket) to the Campaign Members. This field will usually be updated from outside Salesforce.</inlineHelpText>
    <label>Digital Lecture Form Instant-SMS Trigger</label>
    <type>Checkbox</type>
</CustomField>