force-app/main/default/objects/Campaign/fields/Dining_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Dining_End_Time__c</fullName>
    <formula>IF(
    VALUE(RIGHT(TEXT(Dining_Start_Time__c), 2)) + VALUE(LEFT(TEXT(Dining_Duration__c), FIND(&quot; &quot;, TEXT(Dining_Duration__c)) - 1)) &lt; 60,
    TEXT(VALUE(LEFT(TEXT(Dining_Start_Time__c), 2))) &amp; &apos;:&apos; &amp;
    LPAD(TEXT(VALUE(RIGHT(TEXT(Dining_Start_Time__c), 2)) + VALUE(LEFT(TEXT(Dining_Duration__c), FIND(&quot; &quot;, TEXT(Dining_Duration__c)) - 1))), 2, &apos;0&apos;),
    TEXT(VALUE(LEFT(TEXT(Dining_Start_Time__c), 2)) + 
    FLOOR((VALUE(RIGHT(TEXT(Dining_Start_Time__c), 2)) + VALUE(LEFT(TEXT(Dining_Duration__c), FIND(&quot; &quot;, TEXT(Dining_Duration__c)) - 1))) / 60)) &amp; &apos;:&apos; &amp;
    LPAD(TEXT(MOD(VALUE(RIGHT(TEXT(Dining_Start_Time__c), 2)) + VALUE(LEFT(TEXT(Dining_Duration__c), FIND(&quot; &quot;, TEXT(Dining_Duration__c)) - 1)), 60)), 2, &apos;0&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dining End Time</label>
    <type>Text</type>
</CustomField>