force-app/main/default/objects/Campaign/fields/Dining_End_Time_For_Flows__c.field-meta.xml
<CustomField>
    <fullName>Dining_End_Time_For_Flows__c</fullName>
    <formula>IF(
ISBLANK(Start_For_Flows__c),
&quot;&quot;,
LPAD(
TEXT(
VALUE(
MID(
TEXT(Start_For_Flows__c + (1/24) + (45/1440)),
12,
2
)
)
),
2,
&apos;0&apos;
) &amp; &quot;:&quot; &amp;
LPAD(
TEXT(
VALUE(
MID(
TEXT(Start_For_Flows__c + (1/24) + (45/1440)),
15,
2
)
)
),
2,
&apos;0&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dining End Time (For Flows)</label>
    <type>Text</type>
</CustomField>