force-app/main/default/objects/Campaign/fields/DK_SMS_Day_Before__c.field-meta.xml
<CustomField>
    <fullName>DK_SMS_Day_Before__c</fullName>
    <label>DK SMS Day Before</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>