force-app/main/default/objects/Campaign/fields/End_For_Flows__c.field-meta.xml
<CustomField>
    <fullName>End_For_Flows__c</fullName>
    <formula>End__c + (1/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End (For Flows)</label>
    <type>DateTime</type>
</CustomField>