force-app/main/default/objects/Campaign/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>IF(
    OR(
        AND(
            End__c &gt;= DATETIMEVALUE(&apos;2024-03-31 00:00:00&apos;),
            End__c &lt; DATETIMEVALUE(&apos;2024-10-27 00:00:00&apos;)
        ),
        AND(
            End__c &gt;= DATETIMEVALUE(&apos;2025-03-30 00:00:00&apos;),
            End__c &lt; DATETIMEVALUE(&apos;2025-10-26 00:00:00&apos;)
        )
    ),
   
    IF(
        ISBLANK(End__c),
        &quot;&quot;,
        LPAD(
            TEXT(
                VALUE(
                    MID(
                        TEXT(End__c + (2/24)), 
                        12,
                        2
                    )
                )
            ),
            2,
            &apos;0&apos;
        ) &amp; &quot;:&quot; &amp;
        LPAD(
            TEXT(
                VALUE(
                    MID(
                        TEXT(End__c + (2/24)), 
                        15,
                        2
                    )
                )
            ),
            2,
            &apos;0&apos;
        )
    ),
 
    IF(
        ISBLANK(End__c),
        &quot;&quot;,
        LPAD(
            TEXT(
                VALUE(
                    MID(
                        TEXT(End__c + (1/24)), 
                        12,
                        2
                    )
                )
            ),
            2,
            &apos;0&apos;
        ) &amp; &quot;:&quot; &amp;
        LPAD(
            TEXT(
                VALUE(
                    MID(
                        TEXT(End__c + (1/24)), 
                        15,
                        2
                    )
                )
            ),
            2,
            &apos;0&apos;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Text</type>
</CustomField>