force-app/main/default/objects/Campaign/fields/End_Time_For_Flows__c.field-meta.xml
<CustomField>
    <fullName>End_Time_For_Flows__c</fullName>
    <formula>IF(
ISBLANK(End_For_Flows__c),
&quot;&quot;,
LPAD(
TEXT(
VALUE(
MID(
TEXT( End_For_Flows__c  + (1/24)),
12,
2
)
)
),
2,
&apos;0&apos;
) &amp; &quot;:&quot; &amp;
LPAD(
TEXT(
VALUE(
MID(
TEXT(End_For_Flows__c + (1/24)),
15,
2
)
)
),
2,
&apos;0&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time (For Flows)</label>
    <type>Text</type>
</CustomField>