force-app/main/default/objects/Campaign/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <label>Event Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_HH_mm</valueSetName>
    </valueSet>
</CustomField>