force-app/main/default/objects/Campaign/fields/Event_Ended__c.field-meta.xml
<CustomField>
    <fullName>Event_Ended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Ended</label>
    <type>Checkbox</type>
</CustomField>