force-app/main/default/objects/Campaign/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <label>Event ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>