force-app/main/default/objects/Campaign/fields/Event_Poster__c.field-meta.xml
<CustomField>
    <fullName>Event_Poster__c</fullName>
    <label>Event Poster</label>
    <type>Url</type>
</CustomField>