force-app/main/default/objects/Campaign/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <label>Event URL (Deprecated)</label>
    <type>Url</type>
</CustomField>