force-app/main/default/objects/Campaign/fields/Event_URL_Formula__c.field-meta.xml
<CustomField>
    <fullName>Event_URL_Formula__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Market_Unit__c, &apos;DFJ_DK&apos;), 
        ISPICKVAL(Market_Unit__c, &apos;Testamente_DK&apos;)
    ),
    &apos;https://www.totalliv.dk/event-landing/&apos; &amp; Related_Event_ID__c,
    IF(
        OR(
            ISPICKVAL(Market_Unit__c, &apos;FA_SE&apos;), 
            ISPICKVAL(Market_Unit__c, &apos;Testamente_SV&apos;)
        ),
        &apos;https://www.totalliv.se/forelasning/&apos; &amp; Related_Event_ID__c,
        &apos;&apos;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event URL</label>
    <type>Text</type>
</CustomField>