force-app/main/default/objects/Campaign/fields/Expected_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Invoice_Amount__c</fullName>
    <formula>IF(
    TEXT(Invoicing_Agreement__c) = &quot;Per Booked Seat&quot;, 
    Booked_Seats__c * Price_Per_Cover_Excl_Vat__c,
    IF(
        TEXT(Invoicing_Agreement__c) = &quot;Per Scanned Attendee&quot;,
        Count_of_Scanned_Tickets__c * Price_Per_Cover_Excl_Vat__c,
        IF(
            TEXT(Invoicing_Agreement__c) = &quot;Venue Rental Cost&quot;,
            Venue_Rental_Cost_Excl_Vat__c,
            0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the expected invoice amount, based on the noted Invoicing Agreement. If Invoicing Agreement is not set, it will write &quot;0&quot;.</inlineHelpText>
    <label>Expected Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>