force-app/main/default/objects/Campaign/fields/Expected_revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_revenue__c</fullName>
    <formula>CASE(
    Market_Unit__c, 
    &apos;DFJ_DK&apos;, (Capacity__c * 0.5) * $CustomMetadata.Currency_Multiplier_Configuration__mdt.Din_Familie_Jurist.Revenue_Multiplier_Value__c,
    &apos;FA_SE&apos;, (Capacity__c * 0.5) * $CustomMetadata.Currency_Multiplier_Configuration__mdt.dinfamiliejurist_nu.Revenue_Multiplier_Value__c,
    &apos;Testamente_DK&apos;, (Capacity__c * 0.5) * $CustomMetadata.Currency_Multiplier_Configuration__mdt.Testamente_Danmark.Revenue_Multiplier_Value__c,
    &apos;Testamente_SV&apos;, (Capacity__c * 0.5) * $CustomMetadata.Currency_Multiplier_Configuration__mdt.Testamente_Sverige.Revenue_Multiplier_Value__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Capacity * 0.5) * Avg. Lead Value</inlineHelpText>
    <label>Expected Revenue Incl. Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>