force-app/main/default/objects/Campaign/fields/Fluid_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Fluid_Email_Field__c</fullName>
    <label>Fluid Email Field</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>