force-app/main/default/objects/Campaign/fields/Food_Served__c.field-meta.xml
<CustomField>
    <fullName>Food_Served__c</fullName>
    <label>Food Served</label>
    <length>100</length>
    <type>Text</type>
</CustomField>