force-app/main/default/objects/Campaign/fields/Foredragstid_og_dato__c.field-meta.xml
<CustomField>
    <fullName>Foredragstid_og_dato__c</fullName>
    <label>Foredragstid og dato</label>
    <type>DateTime</type>
</CustomField>