force-app/main/default/objects/Campaign/fields/Form_Submission_Count_Sent_to_Lecturer__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Count_Sent_to_Lecturer__c</fullName>
    <label>Form Submission Count Sent to Lecturer</label>
    <type>DateTime</type>
</CustomField>