force-app/main/default/objects/Campaign/fields/Has_Designated_Lecturer__c.field-meta.xml
<CustomField>
    <fullName>Has_Designated_Lecturer__c</fullName>
    <formula>NOT(ISBLANK(Host__r.Designated_Lecturer__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Designated Lecturer</label>
    <type>Checkbox</type>
</CustomField>