force-app/main/default/objects/Campaign/fields/Host_Address__c.field-meta.xml
<CustomField>
    <fullName>Host_Address__c</fullName>
    <label>Host Address</label>
    <type>Address</type>
</CustomField>