force-app/main/default/objects/Campaign/fields/Host_ID__c.field-meta.xml
<CustomField>
    <fullName>Host_ID__c</fullName>
    <label>Host ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>