force-app/main/default/objects/Campaign/fields/Host_Industry__c.field-meta.xml
<CustomField>
    <fullName>Host_Industry__c</fullName>
    <label>Host Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lecture_Host_Type</valueSetName>
    </valueSet>
</CustomField>