force-app/main/default/objects/Campaign/fields/Host_Rating__c.field-meta.xml
<CustomField>
    <fullName>Host_Rating__c</fullName>
    <formula>Host__r.Host_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>