force-app/main/default/objects/Campaign/fields/Host_s_ROAS__c.field-meta.xml
<CustomField>
    <fullName>Host_s_ROAS__c</fullName>
    <formula>Host__r.ROAS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host&apos;s ROAS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>