force-app/main/default/objects/Campaign/fields/Host_Type__c.field-meta.xml
<CustomField>
    <fullName>Host_Type__c</fullName>
    <formula>IF(
  NOT(ISBLANK(TEXT(Account__r.Host_Type__c))),
  TEXT(Account__r.Host_Type__c),
  IF(
    NOT(ISBLANK(TEXT(Host__r.Type__c))),
    TEXT(Host__r.Type__c),
    NULL
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Type</label>
    <type>Text</type>
</CustomField>