force-app/main/default/objects/Campaign/fields/Invoice_Approved__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Approved</label>
    <type>Checkbox</type>
</CustomField>