force-app/main/default/objects/Campaign/fields/Invoicing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Agreement__c</fullName>
    <label>Invoicing Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Booked Seat</fullName>
            </value>
            <value>
                <fullName>Per Scanned Attendee</fullName>
            </value>
            <value>
                <fullName>Locked-In Booking Count</fullName>
            </value>
            <value>
                <fullName>Venue Rental Cost</fullName>
            </value>
            <value>
                <fullName>No Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>