force-app/main/default/objects/Campaign/fields/Is_Campaign_Open_for_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Is_Campaign_Open_for_Bookings__c</fullName>
    <formula>IF(Open_for_Bookings__c, &quot;Open&quot;, &quot;Not Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Campaign Open for Bookings?</label>
    <type>Text</type>
</CustomField>