force-app/main/default/objects/Campaign/fields/Is_Cancelled_by_Screen_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancelled_by_Screen_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancelled by Screen Flow</label>
    <type>Checkbox</type>
</CustomField>