force-app/main/default/objects/Campaign/fields/Is_Confirmed_by_Screen_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirmed_by_Screen_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Confirmed by Screen Flow</label>
    <type>Checkbox</type>
</CustomField>