force-app/main/default/objects/Campaign/fields/Is_Current_User_the_Lecturer__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User_the_Lecturer__c</fullName>
    <formula>IF(  Lecturer__c  = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field only appears true, if the user looking at it, is the Lecturer.</inlineHelpText>
    <label>Is Current User the Lecturer?</label>
    <type>Checkbox</type>
</CustomField>