force-app/main/default/objects/Campaign/fields/Is_Event_Ended__c.field-meta.xml
<CustomField>
    <fullName>Is_Event_Ended__c</fullName>
    <formula>End__c &lt; NOW()</formula>
    <label>Is Event Ended</label>
    <type>Checkbox</type>
</CustomField>