force-app/main/default/objects/Campaign/fields/Is_Using_Screen_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Using_Screen_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked automatically if the booking is made, using the Calendly Screenflow.</description>
    <label>Is Using Screen Flow</label>
    <type>Checkbox</type>
</CustomField>