force-app/main/default/objects/Campaign/fields/Is_Week_Target__c.field-meta.xml
<CustomField>
    <fullName>Is_Week_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Week Target</label>
    <type>Checkbox</type>
</CustomField>