force-app/main/default/objects/Campaign/fields/ISO_Week__c.field-meta.xml
<CustomField>
    <fullName>ISO_Week__c</fullName>
    <formula>ISOWEEK(StartDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISO Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>