force-app/main/default/objects/Campaign/fields/ISO_Year__c.field-meta.xml
<CustomField>
    <fullName>ISO_Year__c</fullName>
    <formula>ISOYEAR(StartDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISO Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>